Fixing dashboard styling on small screens

--- a/web/modules/custom/ps267/css/dashboard-layout.css
+++ b/web/modules/custom/ps267/css/dashboard-layout.css
@@ -1,20 +1,15 @@
 .views-element-container {
-  width: 75%;
-  float: right;
-  margin: 1em 0;
+  margin-bottom: 2em;
   border: 1px solid #999;
   padding: 1em;
   border-radius: 1em;
-  box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+  box-shadow: 5px 5px 10px -2px rgba(0, 0, 0, 0.75);
 }
 .create-content-links {
-  width: 17.5%;
-  float: left;
-  margin: 1em 0;
   border: 1px solid #999;
   padding: 1em;
   border-radius: 1em;
-  box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
+  box-shadow: 5px 5px 10px -2px rgba(0, 0, 0, 0.75);
 }
 .create-content-links ul {
   list-style-type: none;
@@ -23,4 +18,17 @@
 }
 .create-content-links ul li {
   margin-bottom: 1em;
+}
+
+@media (min-width: 975px) {
+  .views-element-container {
+    width: 75%;
+    float: right;
+    margin: 1em 0;
+  }
+  .create-content-links {
+    width: 17.5%;
+    float: left;
+    margin: 1em 0;
+  }
 }
